--- a/android-studio-project/Hauk/build.gradle
+++ b/android-studio-project/Hauk/build.gradle
@@ -1,30 +1,53 @@
+apply from: '../constants.gradle'
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
-    defaultConfig {
-        applicationId "info.varden.hauk"
-        minSdkVersion 24
-        targetSdkVersion 33
-        versionCode 14
-        versionName "1.6.2"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  compileSdkVersion project.ext.compileSdkVersion
+  buildToolsVersion project.ext.buildToolsVersion
+
+  compileOptions {
+    sourceCompatibility project.ext.javaVersion
+    targetCompatibility project.ext.javaVersion
+  }
+
+  defaultConfig {
+    minSdkVersion project.ext.minSdkVersion
+    targetSdkVersion project.ext.targetSdkVersion
+
+    applicationId "info.varden.hauk"
+    versionName project.ext.releaseVersion
+    versionCode project.ext.releaseVersionCode
+
+    archivesBaseName += "-$versionName"
+  }
+
+  buildTypes {
+    release {
+      debuggable      false
+      jniDebuggable   false
+      shrinkResources true
+      minifyEnabled   true
+      proguardFiles = [
+        "proguard-rules.txt",
+        getDefaultProguardFile('proguard-android.txt')
+      ]
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+    debug {
+      debuggable      true
+      jniDebuggable   true
+      shrinkResources false
+      minifyEnabled   false
     }
-    namespace 'info.varden.hauk'
+  }
+
+  lintOptions {
+    disable 'MissingTranslation'
+    abortOnError true
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.preference:preference:1.2.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+  implementation 'androidx.appcompat:appcompat:'                   + project.ext.libVersionAndroidxAppCompat            // https://mvnrepository.com/artifact/androidx.appcompat/appcompat
+  implementation 'androidx.constraintlayout:constraintlayout:'     + project.ext.libVersionAndroidxConstraintLayout     // https://mvnrepository.com/artifact/androidx.constraintlayout/constraintlayout
+  implementation 'androidx.preference:preference:'                 + project.ext.libVersionAndroidxPreference           // https://mvnrepository.com/artifact/androidx.preference/preference
 }
