--- a/android-studio-project/build.gradle
+++ b/android-studio-project/build.gradle
@@ -1,27 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    repositories {
-        google()
-        jcenter()
-        
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  repositories {
+    google()
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:7.3.1'    // https://mvnrepository.com/artifact/com.android.tools.build/gradle?repo=google
+  }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        
-    }
+  repositories {
+    google()
+    jcenter()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
